hphp/hack/test/typecheck/reactive/escaping_mutable_locals3.php.exp
File "escaping_mutable_locals3.php", line 10, characters 9-13:
Neither a Mutable nor MaybeMutable object may be captured by an anonymous function. (Typing[4283])
